@@ -1,6 +1,9 @@
 1.0.7:
-Sam Lantinga - Tue Feb 13 13:34:28 PST 2001
+Sam Lantinga - Tue Feb 13 15:47:20 PST 2001
+ * The updater now prefers local disk files to mirrors.
+Sam Lantinga - Tue Feb 13 14:38:51 PST 2001
  * Show the size of each update as a tooltip message.
+Sam Lantinga - Tue Feb 13 13:34:28 PST 2001
  * Correct the --tmppath command line usage message.
  * Pass --honor-http-proxy to gpg when downloading GPG keys.
 
